--- a/Light World.html
+++ b/Light World.html
@@ -26,10 +26,10 @@
     <button type="button" id="lightOffButton">OFF</button>
     <p>Controls: WASD, spacebar, shift for movement, QE or mouse drag for camera rotation, F to add block, G to delete</p>
     <p>Notes to grader: None</p>
-    <script src="../lib/webgl-utils.js"></script>
-    <script src="../lib/webgl-debug.js"></script>
-    <script src="../lib/cuon-utils.js"></script>
-    <script src="../lib/cuon-matrix-cse160.js"></script>
+    <script src="lib/webgl-utils.js"></script>
+    <script src="lib/webgl-debug.js"></script>
+    <script src="lib/cuon-utils.js"></script>
+    <script src="lib/cuon-matrix-cse160.js"></script>
     <script src="Triangle.js"></script>
     <script src="Cube.js"></script>
     <script src="Sphere.js"></script>
